<resources>
  <string name="app_name">GiottoTop</string>
  <string name="app_version">version 0.1</string>
  <string name="modeAuto">АВТОМАТЧЕСКИЙ РЕЖИМ</string>
  <string name="modeOff">ОТКЛЮЧЕН</string>
  <string name="modeManual">РУЧНОЙ РЕЖИМ</string>
  <string name="settings">НАСТРОЙКИ</string>
  <string name="connecting">СОЕДИНЕНИЕ…</string>
  <string name="error_connection">ОШИБКА</string>
  <string name="error_illegal_function">НЕИЗВЕСТННАЯ ФУНКЦИЯ</string>
  <string name="error_ip_port">Проверти ip и port подключения!</string>
  <string name="error_sensor">Проверьте датчики открытия и закрытия</string>
  <string name="start">Пуск</string>
  <string name="valve1">Открыть клапан</string>
  <string name="valve2">Промывка верхнего\nседла</string>
  <string name="valve3">Промывка нижнего\nседла</string>
  <string name="valveClose">Клапан закрыт</string>
  <string name="valveOpen">Клапан открыт</string>
  <string name="valveTopSeatFlush">Промывка верхнего седла</string>
  <string name="valveLowerSeatFlush">Промывка нижнего седла</string>
  <string name="ip">IP</string>
  <string name="port">PORT</string>
  <string name="ip_address">127.0.0.1</string>
  <string name="port_number">502</string>
  <string name="no_connection">НЕТ СВЯЗИ С КОНТРОЛЛЕРОМ</string>
  <string name="text_timer5">Таймер открытия\nклапана сек.</string>
  <string name="text_timer1">Таймер простоя сек.</string>
  <string name="save">Сохранить</string>
  <string name="default_str">По умолчанию</string>
  <string name="default_ip">192.168.122.85</string>
  <string name="default_port">502</string>
  <string name="default_time5">5</string>
  <string name="default_time1">1</string>

  <string-array name="mode">
    <item>АВТОМАТИЧЕСКИЙ РЕЖИМ</item>
    <item>РУЧНОЙ РЕЖИМ</item>
    <item>ОТКЛЮЧЕН</item>
  </string-array>

  <plurals name="number_of_items">
    <item quantity="one">%d item</item>
    <item quantity="other">%d items</item>
  </plurals>

</resources>